--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
   "name": "nw-ts",
-  "packageManager": "yarn@4.3.1"
+  "packageManager": "yarn@4.3.1",
+  "devDependencies": {
+    "typescript": "^5.5.4"
+  }
 }
