--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "nw-ts",
   "packageManager": "yarn@4.3.1",
   "devDependencies": {
+    "@commitlint/cli": "^19.3.0",
     "typescript": "^5.5.4"
   }
 }
