--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
     "@commitlint/config-conventional": "^19.2.2",
     "husky": "^9.1.4",
     "typescript": "^5.5.4"
+  },
+  "scripts": {
+    "prepare": "husky"
   }
 }
