--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "devDependencies": {
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
+    "@commitlint/types": "^19.0.3",
+    "conventional-changelog-atom": "^5.0.0",
     "husky": "^9.1.4",
     "typescript": "^5.5.4"
   },
