--- a/package.json
+++ b/package.json
@@ -5,11 +5,19 @@
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
     "@commitlint/types": "^19.0.3",
+    "commitizen": "^4.3.0",
     "conventional-changelog-atom": "^5.0.0",
+    "cz-conventional-changelog": "^3.3.0",
     "husky": "^9.1.4",
     "typescript": "^5.5.4"
   },
   "scripts": {
-    "prepare": "husky"
+    "prepare": "husky",
+    "commit": "cz"
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
   }
 }
