--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^9.8.0",
     "husky": "^9.1.4",
+    "lint-staged": "^15.2.8",
     "typescript": "^5.5.4",
     "typescript-eslint": "^8.0.0"
   },
   "scripts": {
     "prepare": "husky",
-    "commit": "cz"
+    "commit": "cz",
+    "lint": "lint-staged"
   },
   "config": {
     "commitizen": {
