--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eslint": "^9.8.0",
     "husky": "^9.1.4",
     "lint-staged": "^15.2.8",
+    "semantic-release": "^24.0.0",
     "typescript": "^5.5.4",
     "typescript-eslint": "^8.0.0"
   },
